Some corrections on BENCH_MODE and sample shell scripts